syntax = "proto3";

package raft;

// Raft consensus service definition
service RaftService {
    // RequestVote RPC - Invoked by candidates to gather votes
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    
    // AppendEntries RPC - Invoked by leader to replicate log entries; also used as heartbeat
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

// RequestVote RPC Request
message RequestVoteRequest {
    // Candidate's term
    uint64 term = 1;
    // Candidate requesting vote
    uint32 candidate_id = 2;
    // Index of candidate's last log entry
    uint64 last_log_index = 3;
    // Term of candidate's last log entry
    uint64 last_log_term = 4;
}

// RequestVote RPC Response
message RequestVoteResponse {
    // Current term, for candidate to update itself
    uint64 term = 1;
    // True means candidate received vote
    bool vote_granted = 2;
}

// Log entry for replication
message LogEntry {
    // Term when entry was received by leader
    uint64 term = 1;
    // Index of this entry in the log
    uint64 index = 2;
    // Type of entry (0 = Normal, 1 = NoOp)
    uint32 entry_type = 3;
    // Command payload
    bytes payload = 4;
}

// AppendEntries RPC Request
message AppendEntriesRequest {
    // Leader's term
    uint64 term = 1;
    // So follower can redirect clients
    uint32 leader_id = 2;
    // Index of log entry immediately preceding new ones
    uint64 prev_log_index = 3;
    // Term of prev_log_index entry
    uint64 prev_log_term = 4;
    // Log entries to store (empty for heartbeat; may send more than one for efficiency)
    repeated LogEntry entries = 5;
    // Leader's commit_index
    uint64 leader_commit = 6;
}

// AppendEntries RPC Response
message AppendEntriesResponse {
    // Current term, for leader to update itself
    uint64 term = 1;
    // True if follower contained entry matching prev_log_index and prev_log_term
    bool success = 2;
    // For optimization: follower's last log index (to help leader find next_index faster)
    optional uint64 last_log_index = 3;
}
